--- a/index.html
+++ b/index.html
@@ -949,8 +949,8 @@
         if (!currentSubject || !currentLesson) return;
         const fileUrls = {
             "Sinh Học": {
-                "Bài 1": "https://download937.mediafire.com/5whr8pui94xg0gT_e-R3Gcff7dQrfakPn9bBJBirXS5JjUQLh1hijc0o5xe5n1VHDCmOjnSzm1LSyATY3yj0htKiHkTZ6uwjMW0mSQLtMQkgHjRkwllFVQ5YAgauzwoqY87OCV7h4CDFs9Vq00Qdd_6GOb0z59kwRKTOWAZWP4b7Sg/7g84f0dgjsn79ef/%5BO%5D-SINH-12-KNTT-BAI_1-THT.py",
-                "Bài 2": "https://download1529.mediafire.com/h897yqp6wfuglr22MkAgOSw4EyAMkw8jq3Hn689jjijZhjqaS3HpsbmU8HiBGyYaFNC442v2JIyRInhHIzxnRTy_SgSrb32BzIcDabLqNuFFl_JavyTlfCB3e3liXnutI2jAPjwzUXczWmmBH4zXWJT4QR1mddui49u0Tg29pb8RzA/jn9uq6ang7k3x9i/%5BO%5D-SINH-KNTT-BAI_2-THT.py",
+                "Bài 1": "https://is.gd/RSECX2",
+                "Bài 2": "https://is.gd/xihR7z",
             },
         };
         
