Add TIN-12-U1 (HTML File)

--- a/index.html
+++ b/index.html
@@ -952,6 +952,9 @@
                 "Bài 1": "https://is.gd/RSECX2",
                 "Bài 2": "https://is.gd/xihR7z",
             },
+            "Tin Học": {
+                "Bài 1": "https://is.gd/OwfAEp",
+            },
         };
         
         const fileUrl = fileUrls[currentSubject.title]?.[currentLesson];
