Add BỘ 20 ĐỀ - THI TỐT NGHIỆP THPT TIN HỌC 2025

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
             id: 6,
             title: "Tin Học",
             image: "https://i.ibb.co/rK9qqkK5/retouch-2025060606223138.jpg",
-            lessons: ["Bài 1", "Bài 2"]
+            lessons: ["Bài 1", "Bài 2", "BỘ 20 ĐỀ - THI TỐT NGHIỆP THPT TIN HỌC 2025"]
         }
     ];
     
@@ -954,6 +954,7 @@
             },
             "Tin Học": {
                 "Bài 1": "https://is.gd/OwfAEp",
+                "BỘ 20 ĐỀ - THI TỐT NGHIỆP THPT TIN HỌC 2025": "https://is.gd/FqDycn",
             },
         };
         
