--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
     </header>
     
     <div class="container">
-        <h4>20:55 - 11/6/2025 </h4>
+        <h4>11:21 - 13/6/2025 </h4>
         <h2> <p style="color: white;">CÁC BÀI HỌC HIỆN CÓ</p> </h2>
         
         <div class="subjects-container" id="subjectsContainer">
@@ -954,7 +954,7 @@
                 "Bài 2": "https://is.gd/xihR7z",
             },
             "Tin Học": {
-                "Bài 1": "https://is.gd/OwfAEp",
+                "Bài 1": "https://is.gd/j5iU5Z",
                 "BỘ 30 ĐỀ THI TNTHPT TIN HỌC 2025": "https://is.gd/dG3lQ5",
             },
         };
