Update LY-12-U2.html bug fix

--- a/physic/LY-12-U2.html
+++ b/physic/LY-12-U2.html
@@ -880,7 +880,7 @@ const multiChoiceQuestions = [
     qImage: null,
     answers: [
       { text: "0 J", correct: false, image: null },
-      { text: "300 J", correct: falsee, image: null },
+      { text: "300 J", correct: false, image: null },
       { text: "-300 J", correct: true, image: null },
       { text: "600 J", correct: false, image: null }
     ]
