Update LY-12-U3.html title subject

--- a/physic/LY-12-U3.html
+++ b/physic/LY-12-U3.html
@@ -253,7 +253,7 @@
 <div id="app">
   <img src="https://i.ibb.co/tMdHNdPH/Picsart-25-07-17-06-40-25-073.jpg" alt="Header Image" class="header-image-placeholder">
   
-  <h2>TÊN MÔN - BÀI 1</h2>
+  <h2>LÝ - BÀI 3</h2>
 
   <button class="btn" id="btn-exit" style="background: var(--red);">
     <svg width="24" height="24" fill="white" viewBox="0 0 24 24" style="vertical-align:middle; margin-right:5px;">
