Update LY-12-U3.html correct answ

--- a/physic/LY-12-U3.html
+++ b/physic/LY-12-U3.html
@@ -783,7 +783,7 @@ const trueFalseQuestions = [
     q: "Nhiệt độ",
     qImage: null,
     answers: [
-      { text: "Nhiệt kế hồng ngoại hoạt động dựa trên sự bức xạ nhiệt.", correct: false, image: null },
+      { text: "Nhiệt kế hồng ngoại hoạt động dựa trên sự bức xạ nhiệt.", correct: true, image: null },
       { text: "Nhiệt độ tuyệt đối là 0 K.", correct: true, image: null },
       { text: "Nhiệt độ 0°C tương ứng với -273.15°C.", correct: false, image: null },
       { text: "Nhiệt độ 100°C tương ứng với 373.15 K.", correct: true, image: null }
